--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-https://github.com/starkware-libs/cairo-lang/releases/download/v0.7.0/cairo-lang-0.7.0.zip
+https://github.com/starkware-libs/cairo-lang/releases/download/v0.9.0/cairo-lang-0.9.0.zip
 pytest==6.2.5
 pytest-asyncio==0.15.1
 lark==0.11.3
+cairo-nile==0.6.1
