--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 https://github.com/starkware-libs/cairo-lang/releases/download/v0.9.0/cairo-lang-0.9.0.zip
 pytest==6.2.5
-dill
+dill==0.3.4
 pytest-asyncio==0.15.1
 lark==0.11.3
 cairo-nile==0.6.1
