--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,4 +19,4 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Run tests
-        run: pytest ./tests/* --disable-pytest-warnings
+        run: pytest ./tests/vat/* --disable-pytest-warnings
