--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-addopts = --maxfail=1 -n auto --dist loadfile
+addopts = --maxfail=1 -n auto --dist loadscope
 ; asyncio_mode = auto
 log_cli = true
 log_cli_level = INFO
