feat: dai contract and tests ✨
- add `test_` prefix for pytest
- refractor dai tests using new `conftest`
- add `check_event` and `check_balances` in `conftest`

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,4 +21,4 @@ jobs:
           if [ -f pyproject.toml ]; then poetry install; fi
 
       - name: Run tests
-        run: poetry run pytest ./tests/vat/* --disable-pytest-warnings
+        run: poetry run pytest tests/ --disable-pytest-warnings
