feat: add hardhat ✨

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,28 @@
-artifacts
-**/__pycache__
-env/
 build
+node_modules
+**/__pycache__
+
+#Hardhat files
+cache
+artifacts
+starknet-artifacts
+factories
+typechain
+typechain-types
+
+.yarn
+.env
+
+# Editor directories and files
 .idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Local deployments
+deployed_contracts/local.json
+
+*.DS_Store
