Add hardhat tests

--- a/package.json
+++ b/package.json
@@ -8,11 +8,8 @@
     "compile:l2": "hardhat starknet-compile ./contracts/starknet/*",
     "compile": "yarn compile:l1 && yarn compile:l2",
     "deploy": "sh deploy.sh",
-    "test:l1": "yarn hardhat test test/ethereum/*.ts",
-    "test:l2": "yarn hardhat test test/starknet/*.ts --starknet-network 'starknetLocal'",
+    "test:l2": "hardhat test test/*.ts --starknet-network 'starknetLocal'",
     "test:l2:ci": "concurrently './scripts/chain-l2.sh' './scripts/test-l2.sh'",
-    "test:crosschain": "'./scripts/test-crosschain.sh'",
-    "test:crosschain:ci": "concurrently './scripts/chain.sh' './scripts/test-crosschain.sh'",
     "deploy:goerli": "yarn hardhat run ./scripts/deployTestSpace.ts",
     "chain:l1": "hardhat node",
     "chain:l2": "starknet-devnet -p 8000 --lite-mode",
