--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -36,6 +36,7 @@ jobs:
 
       - name: Install deps
         run: |
+          python3.8 -m pip install --upgrade pip
           pip install poetry
           if [ -f pyproject.toml ]; then poetry install; fi
 
