--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,6 +7,25 @@ jobs:
       - name: Check out Git repository
         uses: actions/checkout@v3
 
+      - name: Set up node
+        uses: actions/setup-node@v1
+        with:
+          node-version: 14
+
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+
+      - name: Cache yarn dependencies
+        uses: actions/cache@v2
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            yarn-
+      - name: Install yarn dependencies
+        run: yarn install --no-progress --non-interactive
+
       - name: Set up python
         uses: actions/setup-python@v2
         with:
@@ -17,8 +36,18 @@ jobs:
 
       - name: Install deps
         run: |
+          python3.8 -m pip install --upgrade pip
           pip install poetry
           if [ -f pyproject.toml ]; then poetry install; fi
 
-      - name: Run tests
-        run: poetry run pytest tests/ --disable-pytest-warnings
+      - name: Compile Contracts
+        run: yarn compile
+
+      - name: Run Cross Chain Tests
+        run: yarn test:crosschain:ci
+
+      - name: Run L1 tests
+        run: yarn test:l1
+
+      - name: Run L2 tests
+        run: yarn test:l2:ci
