--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,15 @@ build
 node_modules
 cache/
 starknet-artifacts/
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Local deployments
+deployed_contracts/local.json
+
+*.DS_Store
+dump.pkl
