--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "compile:l2": "hardhat starknet-compile ./contracts/starknet/*",
     "compile": "yarn compile:l1 && yarn compile:l2",
     "deploy": "sh deploy.sh",
-    "test:l2": "hardhat test test/*.ts --starknet-network 'starknetLocal'",
+    "test:l2": "yarn hardhat test test/*.ts --starknet-network 'starknetLocal'",
     "test:l2:ci": "concurrently './scripts/chain-l2.sh' './scripts/test-l2.sh'",
     "deploy:goerli": "yarn hardhat run ./scripts/deployTestSpace.ts",
-    "chain:l1": "hardhat node",
-    "chain:l2": "starknet-devnet -p 8000 --lite-mode",
+    "chain:l1": "yarn hardhat node",
+    "chain:l2": "poetry run starknet-devnet -p 8000 --lite-mode",
     "chain": "concurrently 'yarn chain:l1' 'yarn chain:l2'",
     "format:l1": "prettier --write 'contracts/**/*.sol'",
     "check-format:l1": "prettier -c 'contracts/**/*.sol'",
