--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ cairo-nile = "^0.8.0"
 dill = "0.3.4"
 pytest-xdist = "2.4.0"
 pytest-order = "^1.0.1"
+starknet-devnet = "^0.2.11"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
