--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "MCD on Starknet"
 authors = ["MakerDAO"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.8,<3.10"
 pytest = "^6.2.5"
 pytest-asyncio = "0.15.1"
 cairo-lang = "0.10.0"
@@ -14,7 +14,7 @@ cairo-nile = "^0.8.0"
 dill = "0.3.4"
 pytest-xdist = "2.4.0"
 pytest-order = "^1.0.1"
-starknet-devnet = "^0.2.11"
+starknet-devnet = "0.2.11"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
