--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,15 +5,15 @@ description = "MCD on Starknet"
 authors = ["MakerDAO"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
-pytest = "^6.2.5"
-pytest-asyncio = "0.15.1"
+python = "3.9.0"
+pytest = "7.1.2"
+pytest-asyncio = "0.19.0"
 cairo-lang = "0.10.0"
-lark = "0.11.3"
-cairo-nile = "^0.8.0"
-dill = "0.3.4"
-pytest-xdist = "2.4.0"
-pytest-order = "^1.0.1"
+cairo-nile = "0.9.0"
+pytest-xdist = "2.5.0"
+pytest-order = "1.0.1"
+python-dotenv = "0.20.0"
+web3 = "5.30.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
