--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,7 +39,7 @@ jobs:
           python3.9 -m pip install --upgrade pip
           pip install poetry
           if [ -f pyproject.toml ]; then poetry install; fi
-          poetry shell
+          source $(poetry env info --path)/bin/activate
 
       - name: Compile Contracts
         run: yarn compile
