--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,13 @@ description = "MCD on Starknet"
 authors = ["MakerDAO"]
 
 [tool.poetry.dependencies]
-python = "^3.9.0"
+python = ">=3.9.0,<3.10"
 pytest = "7.1.2"
 pytest-asyncio = "0.19.0"
 cairo-lang = "0.10.0"
 cairo-nile = "0.9.0"
 pytest-xdist = "2.5.0"
+starknet-devnet = "^0.3.1"
 pytest-order = "1.0.1"
 python-dotenv = "0.20.0"
 web3 = "5.30.0"
