Teleport Join Tests ✨ (#19)
* feat: add mocks & test init (wip) ✨

* fix: code review fixes 🔨

* feat: file functions + new tests ✨

* feat: more tests + cure function ✨

* feat: more tests + join fixes ✨

* feat: last tests ✨

* fix: fixing tests 🔨

* fix: more tests fixes 🔨

* fix: more test fixes 🔨

- added `mock_vat`
- update hardhat plugin

* fix: more test fixes 🔨

- remove bytes32 conversion
- temp remove `daiSent` & `totalFees` checks

* fix: more test fixes 🔨

- write dai address at initialization

* fix: more test fixes 🔨

* fix: minor test fixes 🔨

- add signed/signed sub function (from warp)
- fix bug in `vat_mock`

* fix: teleport join tests ✨

- todo: handle negative integers in js

* fix: ci ♻️

* fix: ci ♻️

* fix: ci ♻️

* fix: ci ♻️

* fix: ci ♻️

* fix: ci ♻️

* fix: type name ✍️

* feat: solidity comments ✍️

* feat: teleport join changes ✨

- update code to follow https://github.com/makerdao/dss-teleport/commits/routing-v2/src/TeleportJoin.sol

* fix: remove python test files 🔨

* fix: review changes ✍️

* fix: test solidity names ✍️

* fix: switch to docker env ♻️

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test:l2:ci": "concurrently './scripts/chain-l2.sh' './scripts/test-l2.sh'",
     "deploy:goerli": "yarn hardhat run ./scripts/deployTestSpace.ts",
     "chain:l1": "hardhat node",
-    "chain:l2": "starknet-devnet -p 8000 --lite-mode",
+    "chain:l2": "poetry run starknet-devnet -p 9000 --lite-mode",
     "chain": "concurrently 'yarn chain:l1' 'yarn chain:l2'",
     "format:l1": "prettier --write 'contracts/**/*.sol'",
     "check-format:l1": "prettier -c 'contracts/**/*.sol'",
@@ -26,7 +26,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.7.2",
-    "@shardlabs/starknet-hardhat-plugin": "^0.6.2",
+    "@shardlabs/starknet-hardhat-plugin": "^0.6.6",
     "concurrently": "^7.3.0",
     "ethereumjs-util": "^7.1.5",
     "install": "^0.13.0",
