--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,11 +10,11 @@ pytest = "^6.2.5"
 pytest-asyncio = "0.15.1"
 cairo-lang = "0.10.0"
 lark = "0.11.3"
-cairo-nile = "^0.8.0"
 dill = "0.3.4"
 pytest-xdist = "2.4.0"
 pytest-order = "^1.0.1"
-starknet-devnet = "0.2.11"
+cairo-nile = "0.9.1"
+starknet-devnet = "0.3.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
