Squashed commit of the following:
commit b4487b67bbb7161bda9b7c6c145731f638c41b81
Author: Evolve <Artevolve@yahoo.com>
Date:   Mon Oct 24 17:47:07 2022 +0200

    fix: compile error 🔨

commit 2fdafa25ad764fee380855e2cb32350b8f4e53de
Author: Evolve <Artevolve@yahoo.com>
Date:   Thu Oct 20 17:29:26 2022 +0200

    Evolve/dai tests (#13)

    * feat: dai tests (wip) ✨

    * feat: dai tests (wip) ✨

    - Note that user1 denotes self, user2 = user2 and admin = user1

    * feat: dai tests (finished) ✨

    * feat: update starknet plugin 🔨

    * feat: versions migration ✨

    * fix: ci ♻️

    * Delete poetry.lock

    * fix: ci ♻️

    * fix: solidity comments ✍️

    * fix: typo ✍️

    * fix: review ✍️

commit 78251e6010bf1de6cf06afd40dcc16edb313501f
Author: Evolve <Artevolve@yahoo.com>
Date:   Tue Oct 18 14:03:57 2022 +0200

    Teleport Oracle Auth tests ✨ (#21)

    * feat: teleport oracle auth tests ✨ (wip)

    - todo: fix signatures bug

    * fix: ci ♻️

    * feat: solidity comments ✨

commit e85096b28556bc75ddae7e3dbf14e9aee8f6631f
Author: Evolve <Artevolve@yahoo.com>
Date:   Tue Oct 18 14:03:38 2022 +0200

    Teleport Router tests ✨ (#22)

    * feat: teleport router tests ✨

    * feat: solidity comments + new changes ✨

    - Update code to follow https://github.com/makerdao/dss-teleport/blob/routing-v2/src/TeleportRouter.sol
    - add solidity comments for easier review

    * fix: ci ♻️

    * fix: ci ♻️

    * Update pyproject.toml

    * fix: ci ♻️

    * fix: solidity comments ✍️

    * fix: typo ✍️

    * fix: test comments indentation ✍️

    * Update hardhat.config.ts

    * fix: switch to docker env ♻️

    * fix: review ♻️

    * fix: test names comments ✍️

    * Update chain-l2.sh

commit db0b50ce0ee725571ed71c7a38faa74eb291e5ba
Author: Evolve <Artevolve@yahoo.com>
Date:   Mon Oct 17 13:59:00 2022 +0200

    feat: return values w/ transaction trace ✨ (#31)

commit f0298320045fe1612d320286bed2ee4c7db53602
Author: Evolve <Artevolve@yahoo.com>

--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,17 @@ node_modules
 cache/
 starknet-artifacts/
 .vscode/
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Local deployments
+deployed_contracts/local.json
+
+*.DS_Store
+dump.pkl
+unittest-dump.dmp
 *.dmp
