Evolve/cure end (#15)
* feat: cure rewrite ✨

- simple rewrite of cure contract

* fix: move teleports contracts ✍️

* feat: cure tests ✨ (wip)

* feat: cure tests ✨

- issue w/ starknet-devnet time increase

* feat: end rewrite ✨ (wip)

- Added wad/ray library from Aave bridge repo

* feat: end rewrite ✨

- only remains `file` functions
- should we use `Rad/Wad` types ?

* feat: end tests ✨ (wip)

- should everything be tested strictly like L1 contracts since Jug/Pot/Spot are not present on L2

* feat: end Cage_ilk 🔨

* fix: update storage vars 🔨

* fix: update hardhat + fix cure wait test 🔨

* fix: dump file path ✍️

* Update hardhat.config.ts

* Update tests.yml

* Update package.json

* Update pyproject.toml

* fix: devnet version ✍️

* fix: ci 🔨

* fix: gitignore ✍️

* feat: versions migration ✨

* fix: solidity comments ✍️ (cure tests)

* Squashed commit of the following:

commit 78251e6010bf1de6cf06afd40dcc16edb313501f
Author: Evolve <Artevolve@yahoo.com>
Date:   Tue Oct 18 14:03:57 2022 +0200

    Teleport Oracle Auth tests ✨ (#21)

    * feat: teleport oracle auth tests ✨ (wip)

    - todo: fix signatures bug

    * fix: ci ♻️

    * feat: solidity comments ✨

commit e85096b28556bc75ddae7e3dbf14e9aee8f6631f
Author: Evolve <Artevolve@yahoo.com>
Date:   Tue Oct 18 14:03:38 2022 +0200

    Teleport Router tests ✨ (#22)

    * feat: teleport router tests ✨

    * feat: solidity comments + new changes ✨

    - Update code to follow https://github.com/makerdao/dss-teleport/blob/routing-v2/src/TeleportRouter.sol
    - add solidity comments for easier review

    * fix: ci ♻️

    * fix: ci ♻️

    * Update pyproject.toml

    * fix: ci ♻️

    * fix: solidity comments ✍️

    * fix: typo ✍️

    * fix: test comments indentation ✍️

    * Update hardhat.config.ts

    * fix: switch to docker env ♻️

    * fix: review ♻️

    * fix: test names comments ✍️

    * Upd

--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "compile:l2": "hardhat starknet-compile ./contracts/starknet/*",
     "compile": "yarn compile:l1 && yarn compile:l2",
     "deploy": "sh deploy.sh",
-    "test:l2": "hardhat test test/*.ts --starknet-network 'starknetLocal'",
+    "test:l2": "yarn hardhat test test/*.ts --starknet-network 'starknetLocal'",
     "test:l2:ci": "concurrently './scripts/chain-l2.sh' './scripts/test-l2.sh'",
     "deploy:goerli": "yarn hardhat run ./scripts/deployTestSpace.ts",
-    "chain:l1": "hardhat node",
-    "chain:l2": "poetry run starknet-devnet -p 9000 --lite-mode",
+    "chain:l1": "yarn hardhat node",
+    "chain:l2": "poetry run starknet-devnet -p 8000 --lite-mode",
     "chain": "concurrently 'yarn chain:l1' 'yarn chain:l2'",
     "format:l1": "prettier --write 'contracts/**/*.sol'",
     "check-format:l1": "prettier -c 'contracts/**/*.sol'",
@@ -26,7 +26,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.7.2",
-    "@shardlabs/starknet-hardhat-plugin": "^0.6.7",
+    "@shardlabs/starknet-hardhat-plugin": "^0.6.8",
     "concurrently": "^7.3.0",
     "ethereumjs-util": "^7.1.5",
     "install": "^0.13.0",
