--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -28,5 +28,5 @@ jobs:
 
       - name: Check Synchronization
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: yarn check-sync
