--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,18 +5,18 @@ description = "MCD on Starknet"
 authors = ["MakerDAO"]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.10"
-pytest = "^6.2.5"
-pytest-asyncio = "0.15.1"
-cairo-lang = "0.10.1"
+python = ">=3.9,<3.10"
+pytest = ">=7.1.3"
+pytest-asyncio = ">=0.19.0"
+cairo-lang = "0.10.2"
 dill = "0.3.4"
 pytest-xdist = "2.4.0"
 pytest-order = "^1.0.1"
-cairo-nile = "0.9.1"
-starknet-devnet = "0.3.5"
+cairo-nile = "0.11.0"
+starknet-devnet = "0.4.1"
 
 [tool.poetry.dev-dependencies]
-pytest = "^6.2.5"
+pytest = ">=7.1.3"
 black = {version = "^21.9b0", allow-prereleases = true}
 autopep8 = "^1.6.0"
 
