--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,12 +8,12 @@ authors = ["MakerDAO"]
 python = ">=3.9,<3.10"
 pytest = ">=7.1.3"
 pytest-asyncio = ">=0.19.0"
-cairo-lang = "0.10.2"
+cairo-lang = "0.10.3"
 dill = "0.3.4"
 pytest-xdist = "2.4.0"
 pytest-order = "^1.0.1"
-cairo-nile = "0.11.0"
-starknet-devnet = "0.4.1"
+cairo-nile = "0.12.0"
+starknet-devnet = "^0.4.2"
 
 [tool.poetry.dev-dependencies]
 pytest = ">=7.1.3"
