--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "chain": "concurrently 'yarn chain:l1' 'yarn chain:l2'",
     "format:l1": "prettier --write 'contracts/**/*.sol'",
     "check-format:l1": "prettier -c 'contracts/**/*.sol'",
-    "format:l2": "cairo-format -i --one_item_per_line contracts/starknet/**/*.cairo && cairo-format -i --one_item_per_line contracts/starknet/*.cairo",
-    "check-format:l2": "cairo-format -c --one_item_per_line contracts/starknet/**/*.cairo && cairo-format -c --one_item_per_line contracts/starknet/*.cairo",
+    "format:l2": "cairo-format -i --one_item_per_line contracts/*.cairo && cairo-format -i --one_item_per_line contracts/*.cairo",
+    "check-format:l2": "cairo-format -c --one_item_per_line contracts/*.cairo && cairo-format -c --one_item_per_line contracts/*.cairo",
     "format:ts": "eslint . --ext .ts --fix",
     "check-format:ts": "eslint . --ext .ts",
     "format:json": "json-format ./deployments/*.json",
